--- a/src/app.yaml
+++ b/src/app.yaml
@@ -7,6 +7,11 @@ builtins:
 - datastore_admin: on
 
 handlers:
+- url: /favicon.ico
+  static_files: images/favicon.ico
+  upload: images/favicon.ico
+  mime_type: image/x-icon
+
 - url: /css
   static_dir: css
   
